Fix layout overflow

--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,19 @@
 }
 
 .App-header {
-  width: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  height: 70px;
   background-color: #222;
   color: white;
 }
+
 .App-map-container {
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  top: 70px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
 }
